clusters/my-cluster/apps/media/sonarr/app/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: sonarr-svc
  namespace: media
subsets:
- addresses:
  - ip: ${SECRET_MEDIA_STACK_IP_ADDRESS}
  ports:
  - name: sonarr-app
    port: 80
    protocol: TCP
