clusters/my-cluster/apps/media/sonarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
  namespace: media
spec:
  ports:
  - name: sonarr-app
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
